# Digital-Marketing-Campaign-Manager

./: README.md  docker-compose.yaml
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx
client/src/api/: AiBrief.api.ts  Campaigns.api.ts  auth.api.ts  company.api.ts
client/src/components/: MainLayout.tsx  Pagination.tsx  Sidebar.tsx  ThemeToggle.tsx  TopNavbar.tsx
client/src/components/auth/: Login.tsx  ProtectedRoute.tsx
client/src/components/campaigns/: AddCampaignButton.tsx  AiBriefForm.tsx  CampaignForm.tsx  (+4 more)
client/src/contexts/: ThemeContext.tsx
client/src/hooks/: useAiBrief.ts  useAuth.ts  useCampaigns.ts  useCompanies.ts  useDashboardData.ts  useNotificationWebSocket.ts
client/src/page/: CampaignsPage.tsx  CompanyCampaignDetail.tsx  CompanyPage.tsx  DashboardPage.tsx  LoginPage.tsx
client/src/types/: AiBrief.type.ts  auth.type.ts  campaigns.type.ts  company.type.ts  dashboard.type.ts  notification.type.ts
server/: .gitignore  Dockerfile  campaign.py  create_comp.py  create_table.py  main.py  models.py  notification.py  pyproject.toml
server/Agent/: assistant.py  guardrails.py
server/Agent/tool/: analyze_website_full.py  web_search.py
server/Typeschema/: AiBrief.py  authType.py  compType.py
server/auth/: auth.py  password_hashing.py
server/routes/: agentRou.py  authRou.py  campaignRou.py  compRou.py  notificationRou.py
server/security/: deps.py  generate_token.py
server/test/: test_agent.py  test_auth.py  test_campaign_service.py  test_comp.py  test_notification.py
(+15 files in other folders)
